working on name animation, webkit text stroke has a bug with whitespace

--- a/my-site/src/components/Landing/PersonalInfo/personal-info.css
+++ b/my-site/src/components/Landing/PersonalInfo/personal-info.css
@@ -10,6 +10,7 @@
     /* flex-grow: 2; */
 
     /* margin-bottom: 15vh; */
+    box-sizing: border-box;
 }
 
 .personal-info-top-half{
@@ -30,13 +31,54 @@
 }
 
 .name{
-    font-size: 10vh;
+    /* font-size: 10vh;
     border-bottom: solid 1px #a4e7b8;
     width: 70%;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto; */
+    
 }
 
+/* --------------------------------------------- */
+
+.name-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* min-height: 5vh; */
+    /* background: #252839; */
+
+}
+.name {
+    position: relative;
+    font-size: 5vw;
+    color:#252839;
+    -webkit-text-stroke: 0.3vw #383d52;
+    text-transform: uppercase;
+}
+.name::before {
+    content: attr(data-text);
+    position: absolute;
+    top:0;
+    left:0;
+    width: 0;
+    height: 100%;
+    color: #a4e7b8;
+    -webkit-text-stroke: 0vw #383d52;
+    border-right: 2px solid #a4e7b8;
+    overflow: hidden;
+    animation: animate 6s linear infinite;
+}
+
+@keyframes animate {
+    0% ,10%,100%{
+        width: 0;
+    }
+    70%,90%{
+        width: 100%;
+    }
+}
+/* --------------------------------------------- */
 .links{
     display: flex;
     justify-content: center;
